feat: manager notas professor and admin